contact content (done)

--- a/contact/tita.html
+++ b/contact/tita.html
@@ -9,64 +9,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div class="container">
-        <header>
-            <div class="vectors">
-                <img src="img/vectors/vector.png" alt="" id="vec">
-                <img src="img/vectors/vector-1.png" alt="" id="vec1">
-                <img src="img/vectors/vector-2.png" alt="" id="vec2">
-            </div>
-
-            <nav>
-                <div class="wrapper">
-                    <div class="logo">
-                        <a href="home.html"><img src="#" alt="logo" id="logo"></a>
-                    </div>
-                    <div class="menu">
-                        <ul class="navMenu">
-                            <li class="navList">
-                                <a href="#" class="navLink">Home</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">My Course</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Contact</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Blog</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">About Us</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Account</a>
-                            </li>
-                        </ul>
-                        <div class="hamburger">
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-
-            <div class="wrapper">
-                <div class="landingPage">
-                    <div class="bannerText">
-                        <h1><span id="text">Education</span> is the key to all the locked doors of the unknown.</h1>
-                        <p>Learn essential tech skills with KodeGo’s online bootcamps and land your dream career in as fast as 12 weeks.</p>
-                        <button class="btnSeeCourses">See Courses</button>
-                    </div>
-
-                    <div class="heroBanner">
-                        <img src="img/banner/heroBanner.png" alt="heroBanner">
-                    </div>
-                </div>
-            </div>
-        </header>
-    </div> -->
     <section class="contactHeader-container">
       <div id="contactHeader">
         <strong>Let's make something awesome together</strong>
@@ -156,6 +98,16 @@
           <label>What's your concern? <textarea></textarea></label>
           <button type="submit">Send</button>
         </form>
+      </div>
+    </section>
+    <section class="map-container">
+      <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.1070602940617!2d125.81541761528068!3d7.45340686372068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32f95367d438e203%3A0x9a72f1eb68779d76!2sSt%20Mary&#39;s%20College%20of%20Tagum!5e0!3m2!1sen!2sph!4v1669605783247!5m2!1sen!2sph" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+    <section class="choiceDifference-container">
+      <div id="choiceDifference">
+        <p>Who you work with matters. <br> Learn more about the Choice Difference!</p>
       </div>
     </section>
   </body>
