--- a/dashboard/Lesson 1.html
+++ b/dashboard/Lesson 1.html
@@ -156,7 +156,8 @@
          </aside>
       </div>
    </main>
-   <script src="js/XITO.js"></script>
+   <script src="/js/XITO.js"></script>
+   <script src="/js/index.js"></script>>
    <script src="/dashboard/js/maincourse.js"></script>
 </body>
 
