--- a/contact/tita.html
+++ b/contact/tita.html
@@ -88,14 +88,14 @@
           <h2>Message Us</h2>
           <p>If you wish to be considered for employment at Weifield, please do not send a message, here – instead, please complete Weifield’s job application and our Human Resources department will contact you after their review of your submitted information.</p>
         </div>
-        <form id="messageUsForm">
+        <form id="messageUsForm" action="https://formsubmit.co/educademyg2@gmail.com"  method="post">
           <div id="messageUsName">
-            <label for="firstName">First Name <input type="text" id="firstName" /></label>
-            <label for="lastName">Last Name <input type="text" id="lastName" /></label>
+            <label for="firstName">First Name <input type="text" id="firstName" name="FirstName" /></label>
+            <label for="lastName">Last Name <input type="text" id="lastName" name="LastName" /></label>
           </div>
-          <label for="phoneNumber">Phone Number <input type="number" id="phoneNumber" /></label>
-          <label for="email">Email <input type="email" id="email" /></label>
-          <label>What's your concern? <textarea></textarea></label>
+          <label for="phoneNumber">Phone Number <input  id="phoneNumber" name="Phone Number" /></label>
+          <label for="email">Email <input type="email" id="email" name="Email" /></label>
+          <label>What's your concern? <textarea name="Message"></textarea></label>
           <button type="submit">Send</button>
         </form>
       </div>
