--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/indexCSS/login.css">
+    <link rel="stylesheet" href="/css/login/login.css">
 </head>
 <body>
     
