--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -58,7 +58,7 @@
                         <a href="#" class="navLink active-nav-a active-nav">About Us</a>
                     </li>
                     <li class="navList">
-                        <a href="#" class="navLink">Account</a>
+                        <a href="/login.html" class="navLink">Account</a>
                     </li>
                 </ul>
                 <div class="hamburger">
