--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="/aboutus/about.html" class="navLink">About Us</a>
                     </li>
                     <li class="navList">
-                        <a href="#" class="navLink">Account</a>
+                        <a href="/login.html" class="navLink">Account</a>
                     </li>
                 </ul>
                 <div class="hamburger">
