--- a/login.html
+++ b/login.html
@@ -40,8 +40,8 @@
             </div>
             <div class="menu">
                 <ul class="navMenu">
-                    <li class="navList active-nav">
-                        <a href="#" class="navLink active-nav-a active-nav">Home</a>
+                    <li class="navList ">
+                        <a href="/index.html" class="navLink">Home</a>
                     </li>
                     <li class="navList">
                         <a href="#" class="navLink">My Course</a>
@@ -55,8 +55,8 @@
                     <li class="navList">
                         <a href="/aboutus/about.html" class="navLink">About Us</a>
                     </li>
-                    <li class="navList">
-                        <a href="#" class="navLink">Account</a>
+                    <li class="navList active-nav">
+                        <a href="#" class="navLink  active-nav-a active-nav">Account</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -90,12 +90,12 @@
                     <h5>Email</h5>
                     <input class="inputTag" type="email" name="email" id="email" autocomplete="off">
                     <div class="hidden_email">
-                        <h4>Email >= 6</h4>
+                        <i  class="error">Email >= 6</i >
                     </div>
                     <h5>Password</h5>
                     <input  class="inputTag" type="password" name="password" id="password" autocomplete="off">
                     <div class="hidden_pass">
-                        <h4>Password >= 8</h4>
+                        <i class="error" >Password >= 8</i>
                     </div>
                     <div class="box">
                         <div class="remember">
@@ -187,6 +187,7 @@
 
         </div>
     </footer>
+    <script src="/js/login.js"></script>
     <script src="js/XITO.js"></script>
     <script src="/js/index.js"></script>
 
