--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -52,7 +52,7 @@
                         <a href="#" class="navLink">Contact</a>
                     </li>
                     <li class="navList">
-                        <a href="#" class="navLink">Blog</a>
+                        <a href="/blog/blog.html" class="navLink">Blog</a>
                     </li>
                     <li class="navList active-nav">
                         <a href="#" class="navLink active-nav-a active-nav">About Us</a>
