--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
-    <link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <link rel="stylesheet" href="css/indexCSS/Testimonial.css">
@@ -64,7 +63,7 @@
                         <a href="#" class="navLink">Contact</a>
                     </li>
                     <li class="navList">
-                        <a href="#" class="navLink">Blog</a>
+                        <a href="/blog/blog.html" class="navLink">Blog</a>
                     </li>
                     <li class="navList">
                         <a href="/aboutus/about.html" class="navLink">About Us</a>
