--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                         <a href="#" class="navLink">Contact</a>
                     </li>
                     <li class="navList">
-                        <a href="#" class="navLink">Blog</a>
+                        <a href="/blog/blog.html" class="navLink">Blog</a>
                     </li>
                     <li class="navList">
                         <a href="/aboutus/about.html" class="navLink">About Us</a>
