--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Edu</title>
 
-    <link rel="stylesheet" href="css/indexCSS/Nav & Hero.css">
-    <link rel="stylesheet" href="/css/indexCSS/what We Offer & Student Enrolled.css">
-    <link rel="stylesheet" href="/css/indexCSS/LEARN ANYTHING.css">
+    <link rel="stylesheet" href="../css/indexCSS/Nav & Hero.css">
+    <link rel="stylesheet" href="../css/indexCSS/what We Offer & Student Enrolled.css">
+    <link rel="stylesheet" href="../css/indexCSS/LEARN ANYTHING.css">
     <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
@@ -27,7 +27,7 @@
     <nav class="main-nav" id="navigation">
         <div class="wrapper">
             <div class="logo">
-                <a href="index.html"><svg width="79" height="60" viewBox="0 0 79 60" fill="none"
+                <a href="../index.html"><svg width="79" height="60" viewBox="0 0 79 60" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path class="layer"
                             d="M66.9362 47.5901L56.3815 51.8623L43.628 57.0139H43.5652C43.5023 57.0139 43.5024 57.0139 43.4395 57.0767C43.3139 57.1396 43.2511 57.1396 43.1254 57.2024C43.0626 57.2024 42.9997 57.2024 42.9369 57.2652C42.8741 57.2652 42.7484 57.3281 42.6856 57.3281C42.6228 57.3281 42.56 57.328 42.4972 57.3909C42.4343 57.3909 42.3087 57.3909 42.2459 57.4537C42.183 57.4537 42.1202 57.4537 41.9945 57.4537C41.9317 57.4537 41.8689 57.4537 41.7432 57.4537C41.6176 57.4537 41.4919 57.4537 41.3663 57.4537H41.3035C41.1778 57.4537 41.0522 57.4537 40.9893 57.3909C40.9265 57.3909 40.9265 57.3909 40.8637 57.3909C40.8637 57.3909 40.8637 57.3909 40.8009 57.3909C40.738 57.3909 40.6124 57.3281 40.5496 57.3281C40.4867 57.3281 40.4867 57.3281 40.4239 57.2652C40.2983 57.2652 40.2354 57.2024 40.1098 57.1396C40.047 57.1396 40.047 57.1396 39.9841 57.0767L4.80198 42.8782C2.41462 41.9359 1.15811 39.2344 2.03767 36.847C2.98005 34.3968 5.74436 33.2031 8.13172 34.2083L39.4187 46.8362L39.9213 47.0247C41.0522 47.4645 42.3715 47.4645 43.5024 47.0247L71.7737 35.5905L77.6793 33.2031C78.3704 32.9518 78.3076 32.1351 77.7421 31.821L45.1358 17.1199C42.9997 16.1775 40.4867 16.1775 38.3507 17.1199L4.23655 32.5121C2.54027 33.1403 1.15811 34.3968 0.467034 36.1559C-0.852297 39.4228 0.718339 43.1924 3.98525 44.5117L39.1674 58.7102C39.6072 58.8987 40.047 59.0243 40.4867 59.0872H40.5496C40.6752 59.0872 40.8637 59.15 40.9893 59.15C41.0522 59.15 41.0522 59.15 41.115 59.15C41.3035 59.15 41.4919 59.15 41.6804 59.15C42.4971 59.15 43.3139 58.9615 44.0678 58.7102L76.2971 45.7054C77.8678 45.0771 78.1191 44.5117 78.1191 43.1295L66.9362 47.5901ZM4.8648 32.2608C4.8648 32.2608 4.80198 32.2608 4.8648 32.2608C4.80198 32.2608 4.8648 32.2608 4.8648 32.2608ZM5.93283 32.0723C5.87001 32.0723 5.87001 32.0723 5.80718 32.0723C5.87001 32.0723 5.93283 32.0723 5.93283 32.0723ZM5.43024 32.1351H5.36741C5.36741 32.1351 5.36741 32.1351 5.43024 32.1351Z"
@@ -63,13 +63,13 @@
                         <a href="#" class="navLink">Contact</a>
                     </li>
                     <li class="navList">
-                        <a href="/blog/blog.html" class="navLink">Blog</a>
+                        <a href="../blog/blog.html" class="navLink">Blog</a>
                     </li>
                     <li class="navList">
-                        <a href="/aboutus/about.html" class="navLink">About Us</a>
+                        <a href="../aboutus/about.html" class="navLink">About Us</a>
                     </li>
                     <li class="navList">
-                        <a href="/login.html" class="navLink">Account</a>
+                        <a href="../login.html" class="navLink">Account</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -84,9 +84,9 @@
         <header>
             <!-- Background vectors, nag export nalang po ako ng img ksi hindi ko po alam kung paano sila ilagay hahaha. -->
             <div class="vectors">
-                <img src="img/vectors/vector.png" alt="" id="vec">
-                <img src="img/vectors/vector-1.png" alt="" id="vec1">
-                <img src="img/vectors/vector-2.png" alt="" id="vec2">
+                <img src="../img/vectors/vector.png" alt="" id="vec">
+                <img src="../img/vectors/vector-1.png" alt="" id="vec1">
+                <img src="../img/vectors/vector-2.png" alt="" id="vec2">
             </div>
             <div class="wrapper" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
                 <div class="landingPage">
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="heroBanner">
-                        <img src="img/banner/heroBanner.png" alt="heroBanner">
+                        <img src="../img/banner/heroBanner.png" alt="heroBanner">
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
             <div class="course-main">
                 <div class="box" data-aos="fade-down-left">
                     <div class="imge-box">
-                        <img src="/assets/English-language.jpg" alt="">
+                        <img src="../assets/English-language.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>English</h3>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="box padding" data-aos="fade-down-left">
                     <div class="imge-box ">
-                        <img src="/assets/Maths_1.jpg" alt="">
+                        <img src="../assets/Maths_1.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>Mathematics</h3>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="box" data-aos="fade-down-left">
                     <div class="imge-box">
-                        <img src="/assets/myhc_78987.jpg" alt="">
+                        <img src="../assets/myhc_78987.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>Science</h3>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="box order  padding" data-aos="fade-down-left">
                     <div class="imge-box">
-                        <img src="/assets/T-AD-008-Art-Title-Display-Lettering.jpg" alt="">
+                        <img src="../assets/T-AD-008-Art-Title-Display-Lettering.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>Art</h3>
@@ -188,7 +188,7 @@
     <section class="learnAnything-container">
         <div id="learnAnything">
             <div id="learnAnythingImage">
-                <img src="/img/learnAnything.png" alt="A boy carrying 5 books">
+                <img src="../img/learnAnything.png" alt="A boy carrying 5 books">
             </div>
             <article id="learnAnythingText">
                 <div data-aos="fade-down">
@@ -343,7 +343,7 @@
             <div id="testim-content" class="cont">
 
                 <div class="active">
-                    <div class="img"><img src="/images/billgates.jpg" alt=""></div>
+                    <div class="img"><img src="../images/billgates.jpg" alt=""></div>
                     <h2>Bill Gates</h2>
                     <p>"My experience at JJJXTZ International School is great and memorable. The mentors at JJJTXT
                         School helped us enhance my academic and interpersonal skills. I am thankful to Training &
@@ -353,7 +353,7 @@
 
 
                 <div>
-                    <div class="img"><img src="/images/evan.jpg" alt=""></div>
+                    <div class="img"><img src="../images/evan.jpg" alt=""></div>
                     <h2>Evan Spiegel</h2>
                     <p>“It was a great experience studying at Sharda University, a memory to cherish for lifetime. My
                         experience at Sharda was full of learning and grooming. Being a global university It gave me an
@@ -364,7 +364,7 @@
 
 
                 <div>
-                    <div class="img"><img src="/images/jawed.jpg" alt=""></div>
+                    <div class="img"><img src="../images/jawed.jpg" alt=""></div>
                     <h2>Jawed Karim</h2>
                     <p>It was my immense luck and fortune to be the part of Sharda University where I can grow. The
                         entire faculty and department leaves no stone unturned to shape one\'s future. My four years at
@@ -374,7 +374,7 @@
                 </div>
 
                 <div>
-                    <div class="img"><img src="/images/kevin.jpg" alt=""></div>
+                    <div class="img"><img src="../images/kevin.jpg" alt=""></div>
                     <h2>Kevin Systrom</h2>
                     <p>Sharda University has been a great contributor to the development of my personality. I have
                         established my leadership, time management and team skills and have also been able to advance
@@ -384,7 +384,7 @@
                 </div>
 
                 <div>
-                    <div class="img"><img src="/images/mark.jpg" alt=""></div>
+                    <div class="img"><img src="../images/mark.jpg" alt=""></div>
                     <h2>Mark Zuckerberg</h2>
                     <p>Sharda University has been a great contributor to the development of my personality. I have
                         established my leadership, time management and team skills and have also been able to advance
@@ -407,7 +407,7 @@
                 <div class="blog-card" data-aos="zoom-in-down">
                     <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
-                        <img src="/assets/blog1.png" alt="">
+                        <img src="../assets/blog1.png" alt="">
                     </div>
                     <div class="text-blog">
                         <h3>Recreating Stranger Things' intro with parallax scroll</h3>
@@ -418,7 +418,7 @@
                 <div class="blog-card" data-aos="zoom-in-down">
                     <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
-                        <img src="/assets/blog1.png" alt="">
+                        <img src="../assets/blog1.png" alt="">
                     </div>
                     <div class="text-blog">
                         <h3>Recreating Stranger Things' intro with parallax scroll</h3>
@@ -429,7 +429,7 @@
                 <div class="blog-card" data-aos="zoom-in-down">
                     <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
-                        <img src="/assets/blog1.png" alt="">
+                        <img src="../assets/blog1.png" alt="">
                     </div>
                     <div class="text-blog">
                         <h3>Recreating Stranger Things' intro with parallax scroll</h3>
@@ -451,14 +451,14 @@
         font-size: clamp(20px, 10vw, 40px);"
         >Key Supporters</h3>
         <div class="d-flex justify-content-center align-items-center pt-4 gap-5 flex-wrap">
-            <img src="KeySupporters/image 7.png" alt="">
-            <img src="KeySupporters/image 8.png" alt="">
-            <img src="KeySupporters/image 9.png" alt="">
-            <img src="KeySupporters/image 10.png" alt="">
-            <img src="KeySupporters/image 11.png" alt="">
-            <img src="KeySupporters/image 12.png" alt="">
-            <img src="KeySupporters/image 13.png" alt="">
-            <img src="KeySupporters/image 14.png" alt="">
+            <img src="../KeySupporters/image 7.png" alt="">
+            <img src="../KeySupporters/image 8.png" alt="">
+            <img src="../KeySupporters/image 9.png" alt="">
+            <img src="../KeySupporters/image 10.png" alt="">
+            <img src="../KeySupporters/image 11.png" alt="">
+            <img src="../KeySupporters/image 12.png" alt="">
+            <img src="../KeySupporters/image 13.png" alt="">
+            <img src="../KeySupporters/image 14.png" alt="">
         </div>
     </section>
 
@@ -477,11 +477,11 @@
                 <h3>Instagram</h3>
                 <div class="cont-img">
                     <div class="img-grid">
-                        <img class="img1" src="/assets/istockphoto-950605046-612x612.jpg" alt="">
-                        <img class="img2" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img3" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img4" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img5" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img1" src="../assets/istockphoto-950605046-612x612.jpg" alt="">
+                        <img class="img2" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img3" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img4" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img5" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -525,11 +525,11 @@
         </div>
     </footer>
 
-    <script src="js/XITO.js"></script>
+    <script src="../js/XITO.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="../js/index.js"></script>
     <script src="https://use.fontawesome.com/1744f3f671.js"></script>
-    <script src="js/testimonial.js"></script>
+    <script src="../js/testimonial.js"></script>
     <script>
         AOS.init();
     </script>
