--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="../css/indexCSS/LEARN ANYTHING.css">
     <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
+    <link rel="stylesheet" href="../css/indexCSS/Our Pricing.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/indexCSS/Testimonial.css">
-    <link rel="stylesheet" href="/css/indexCSS/BLOG POST & EVENTS.css">
+    <link rel="stylesheet" href="../css/indexCSS/Testimonial.css">
+    <link rel="stylesheet" href="../css/indexCSS/BLOG POST & EVENTS.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
