--- a/dashboard/mainDashboard/mainDashboard.html
+++ b/dashboard/mainDashboard/mainDashboard.html
@@ -15,7 +15,7 @@
         <div class="leaderboard">
             <div class="text-leaderboard font-box">
                 <label>Leaderboard Points</label>
-                <h3>1,290</h3>
+                <h3 id="points"></h3>
                 <p><span>14% </span> vs last month</p>
             </div>
             <div>
@@ -26,11 +26,20 @@
         <div class="leaderboard">
             <div class="text-leaderboard font-box">
                 <label>Learning Hours</label>
-                <h3>40 Hours</h3>
+                <h3 id="hours"></h3>
                 <p><span>14% </span> vs last month</p>
             </div>
             <div>
-                <img src="/dashboard/mainDashboard/img/OBJECTS.svg" alt="">
+                <div class="Current-Course">
+                    <div class="course-img">
+                        <div class="circular-container">
+                            <div class="circular-progress">
+                                <div class="value-content">0%</div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -56,6 +65,8 @@
             </div>
         </div>
     </div>
+
+    <script src="/dashboard/mainDashboard/jsMainDash/jsMainDash.js"></script>
 </body>
 
 </html>
