--- a/dashboard/quiz.html
+++ b/dashboard/quiz.html
@@ -75,15 +75,27 @@
         <div class="main-container">
             <section>
                 <div class="video-course">
-                    <div class="quiz-container">
-                        <div id="question">
+                    <div class="quiz-main">
+                    <div class="quiz-box">
+                        <h1 class="title">Quiz Challenge</h1>
+                        <div class="quiz-container">
+                            <div class="top-quiz">
+                                <h3>Score : <span class="score">0</span></h3>
+                                <button  id="reset"><i class="fa-solid fa-rotate-right"></i></button>
+                            </div>
+                            <div id="question">
+                                <h1>What is the Sum of 1 +1 = ?</h1>
+                            </div>
+                            <div class="container">
+                                <div class="choice" id="choices">
+                                </div>
+                                <i id="no_ans"></i>
+                            </div>
+                            <div  class="btn-next">
+                                <button id="nxt">Next</button>
+                            </div>
                         </div>
-                        <div id="choices">
-                        </div>
-                        <button id="nxt">Next</button>
-                        <button id="reset">Reset/Start again</button>
-                        <p>Score: <span class="score"></span></p>
-                        <h3 id="no_ans"></h3>
+                    </div>
                     </div>
                 </div>
             </section>
@@ -101,8 +113,7 @@
                             <a href="/dashboard/Lesson 1.html" class="card-course  ">
                                 <div class="text-course">
                                     <h4>Lesson 1 - Algebra</h4>
-                                    <p>Browse Math Lesson Plans. Award winning educational materials designed to help
-                                        kids succeed. Start for free now!</p>
+                                    <p>Browse Math Lesson Plans. Award winning educational materials designed</p>
                                 </div>
                                 <div class="play">
                                     <i class="fa-solid fa-circle-play"></i>
@@ -115,8 +126,7 @@
                                 <a href="/dashboard/Lesson2.html" class="card-course ">
                                     <div class="text-course">
                                         <h4>Lesson 2 - Algebra</h4>
-                                        <p>Browse Math Lesson Plans. Award winning educational materials designed to
-                                            help kids succeed. Start for free now!</p>
+                                        <p>Browse Math Lesson Plans. Award winning educational materials designed </p>
                                     </div>
                                     <div class="play">
                                         <i class="fa-solid fa-circle-play"></i>
@@ -129,8 +139,7 @@
                                     <a href="#" class="card-course">
                                         <div class="text-course">
                                             <h4>Lesson 3 - Arithmetic</h4>
-                                            <p>Browse Math Lesson Plans. Award winning educational materials designed to
-                                                help kids succeed. Start for free now!</p>
+                                            <p>Browse Math Lesson Plans. Award winning educational materials designed </p>
                                         </div>
                                         <div class="play">
                                             <i class="fa-solid fa-circle-play"></i>
@@ -144,8 +153,7 @@
                                     <a href="/dashboard/quiz.html" class="card-course cardActive activeP">
                                         <div class="text-course">
                                         <h4>Quiz Challenge</h4>
-                                        <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to
-                                            help kids succeed. Start for free now!</p>
+                                        <p class="activeP">Browse Math Lesson Plans. Award winning educational materials </p>
                                         </div>
                                         <div class="play">
                                         <i class="fa-solid fa-circle-play activeP"></i>
