--- a/dashboard/Lesson2.html
+++ b/dashboard/Lesson2.html
@@ -100,8 +100,7 @@
                             <a href="/dashboard/Lesson 1.html" class="card-course  ">
                                 <div class="text-course">
                                     <h4>Lesson 1 - Algebra</h4>
-                                    <p>Browse Math Lesson Plans. Award winning educational materials designed to help
-                                        kids succeed. Start for free now!</p>
+                                    <p>Arithmetic is the branch of mathematics that deals</p>
                                 </div>
                                 <div class="play">
                                     <i class="fa-solid fa-circle-play"></i>
@@ -114,8 +113,7 @@
                                 <a href="#" class="card-course cardActive">
                                     <div class="text-course">
                                         <h4>Lesson 2 -  Polynomials</h4>
-                                        <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to
-                                            help kids succeed. Start for free now!</p>
+                                        <p class="activeP">A polynomial is defined as an expression which is composed</p>
                                     </div>
                                     <div class="play">
                                         <i class="fa-solid fa-circle-play activeP"></i>
@@ -128,8 +126,7 @@
                                     <a href="/dashboard/lesson3.html" class="card-course">
                                         <div class="text-course">
                                             <h4>Lesson 3 - Arithmetic</h4>
-                                            <p>Browse Math Lesson Plans. Award winning educational materials designed to
-                                                help kids succeed. Start for free now!</p>
+                                            <p>Arithmetic is the branch of mathematics that deals with the study</p>
                                         </div>
                                         <div class="play">
                                             <i class="fa-solid fa-circle-play"></i>
