--- a/dashboard/Lesson 1.html
+++ b/dashboard/Lesson 1.html
@@ -100,8 +100,7 @@
                      <a href="#" class="card-course  cardActive">
                         <div class="text-course">
                            <h4>Lesson 1 - Algebra</h4>
-                           <p class="activeP">Browse Math Lesson Plans. Award winning educational materials designed to help
-                              kids succeed. Start for free now!</p>
+                           <p class="activeP">Algebra is the part of mathematics that helps represent problems.</p>
                         </div>
                         <div class="play">
                            <i class="fa-solid fa-circle-play activeP"></i>
@@ -114,8 +113,7 @@
                         <a href="/dashboard/Lesson2.html" class="card-course">
                            <div class="text-course">
                               <h4>Lesson 2 - Polynomials</h4>
-                              <p>Browse Math Lesson Plans. Award winning educational materials designed to
-                                 help kids succeed. Start for free now!</p>
+                              <p>In mathematics, a polynomial is an expression consisting of </p>
                            </div>
                            <div class="play">
                               <i class="fa-solid fa-circle-play"></i>
@@ -128,8 +126,7 @@
                            <a href="/dashboard/lesson3.html" class="card-course">
                               <div class="text-course">
                                  <h4>Lesson 3 - Arithmetic</h4>
-                                 <p >Browse Math Lesson Plans. Award winning educational materials designed to
-                                    help kids succeed. Start for free now!</p>
+                                 <p>Arithmetic is the branch of mathematics that deals with the study</p>
                               </div>
                               <div class="play">
                                  <i class="fa-solid fa-circle-play"></i>
@@ -143,8 +140,6 @@
                            <a href="/dashboard/lesson3.html" class="card-course">
                               <div class="text-course">
                                  <h4>Quiz Challenge</h4>
-                                 <p>Browse Math Lesson Plans. Award winning educational materials designed to
-                                    help kids succeed. Start for free now!</p>
                               </div>
                               <div class="play">
                                  <i class="fa-solid fa-circle-play"></i>
@@ -153,6 +148,7 @@
                         </div>
                      </div>
                   </div>
+               </div>
          </aside>
       </div>
    </main>
